[tool.poetry]
name = "grizlyorders"
version = "0.1.0"
description = ""
authors = ["lessay"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
gspread = "^5.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
