[tool.poetry]
name = "grizlyorders"
version = "0.1.0"
description = ""
authors = ["Petr Lessner <petr.lessner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
lxml = "^4.7.1"
cssselect = "^1.1.0"
google-api-python-client = "^2.36.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.6"
gspread = "^5.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
